--- a/css/style.css
+++ b/css/style.css
@@ -73,43 +73,72 @@
     color: white;
   }
 
-/* milestones */
-.milestones
+/* why */
+
+  .why
+{
+	width: 100%;
+	padding-top: 115px;
+	padding-bottom: 113px;
+}
+.why .section_subtitle,
+.why .section_title
+{
+	color: #FFFFFF;
+}
+.why_row
+{
+	margin-top: 100px;
+}
+.why_item
 {
 	width: 100%;
 	background: #FFFFFF;
-	padding-top: 115px;
-	padding-bottom: 115px;
 }
-.milestone
+.why_image
 {
-	width: 100%;
+	width: 35%;
 }
-.milestone_icon
-{
-	display: inline-block;
-	height: 82px;
-	width: 82px;
-}
-.milestone_icon img
+.why_image img
 {
 	max-width: 100%;
 }
-.milestone_counter
+.why_content
+{
+	padding-top: 48px;
+	padding-bottom: 55px;
+	padding-left: 35px;
+	padding-right: 35px;
+}
+.why_title
 {
 	font-family: 'Oswald', sans-serif;
-	font-size: 60px;
+	font-size: 30px;
 	font-weight: 500;
 	color: #181818;
-	line-height: 0.75;
-	margin-top: 35px;
+	line-height: 1.1;
 }
-.milestone_text
+.why_text
 {
-	font-family: 'Oswald', sans-serif;
-	font-size: 18px;
-	font-weight: 500;
-	color: #838383;
-	margin-top: 31px;
-	line-height: 0.75;
+	margin-top: 20px;
 }
+.why_icon
+{
+	position: absolute;
+	top: -29px;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-o-transform: translateX(-50%);
+	transform: translateX(-50%);
+	width: 73px;
+	height: 73px;
+	background: #f2f5f6;
+	border-radius: 50%;
+}
+.why_icon img
+{
+	max-width: 60%;
+}
+
