--- a/css/style.css
+++ b/css/style.css
@@ -69,10 +69,10 @@
   }
   
   .topnav a.active {
-    background-color: #04AA6D;
+    background-color: #3924be;
     color: white;
   }
-  
+
 
 a.link  :link {color:#ff0000;}
 a.link  :visited {color:#0000ff;}
