--- a/css/style.css
+++ b/css/style.css
@@ -1,79 +1,90 @@
 @charset "utf-8";
 /* CSS Document */
 
-
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Oswald:400,500,600,700');
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,800|Ibarra+Real+Nova:400,500,600,700");
 
 .container {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
   }
-  
-  @media (min-width: 768px) {
-    .container {
-      width: 750px;
-    }
+}
+
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
   }
-  
-  @media (min-width: 992px) {
-    .container {
-      width: 970px;
-    }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
   }
-  
-  @media (min-width: 1200px) {
-    .container {
-      width: 1170px;
-    }
-  }
-  
+}
+
+.container .col p {
+  padding: 0.25rem 0.75rem;
+}
+
+/* 2 columns (600px) */
+
+@media only screen and (min-width: 600px) {
   .container .col {
-    background: rgb(255, 255, 255);
+    float: left;
+    width: 50%;
   }
-  
-  .container .col p {
-    padding: .25rem .75rem;
-  }
-  
-  
-  /* 2 columns (600px) */
-  
-  @media only screen and (min-width:600px) {
-    .container .col {
-      float: left;
-      width: 50%;
-    }
-  }
+}
 
 /* nav bar */
 
-  .topnav {
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #3924be;
-    color: white;
-  }
+.topnav {
+  /* overflow: hidden; */
+  background-color: #333339;
+  text-align: center;
+  padding: 16px 16px;
+}
 
+.topnav a {
+  /* float: left; */
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-a.link  :link {color:#ff0000;}
-a.link  :visited {color:#0000ff;}
-a.link  :hover {color:#ffcc00;}
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #3924be;
+  color: white;
+}
+
+a.link:link {
+  color: #ff0000;
+}
+a.link:visited {
+  color: #0000ff;
+}
+a.link:hover {
+  color: #ffcc00;
+}
+
+* {
+  box-sizing: border-box;
+  outline: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+:root {
+  font-family: "Source Sans Pro", sans-serif;
+}
