--- a/css/style.css
+++ b/css/style.css
@@ -42,31 +42,30 @@
 }
 
 /* nav bar */
-
 .topnav {
-  /* overflow: hidden; */
-  background-color: #333339;
-  text-align: center;
-  padding: 16px 16px;
+  background: #333339;
+  display: flex;
+  justify-content: center;
 }
 
 .topnav a {
-  /* float: left; */
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+  display: block;
   text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  color: white;
+  padding: 10px 15px;
+  margin: 10px 5px;
+  border-radius: 5px;
+  border: 2px solid transparent;
+  transition: all .2s;
 }
 
 .topnav a.active {
-  background-color: #3924be;
-  color: white;
+  background: #3c53b5;
+  border-color: #3c53b5;
+}
+
+.topnav a:hover {
+  border-color: #3c53b5;
 }
 
 a.link:link {
